SERVER-25344 Fix race condition at MigrationDestinationManager abort